--- a/mileston_01/styles.css
+++ b/mileston_01/styles.css
@@ -49,6 +49,8 @@ label{
 input[type="text"],
 input[type="email"],
 input[type="tel"],
+input[type="date"],
+select,
 textarea {
     width: 95% ;
     padding: 8px;
@@ -60,6 +62,11 @@ textarea {
     background: transparent;
     box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.3)
 
+}
+input:focus, textarea:focus, select:focus {
+    outline: none;
+    border-color: #342dbb;
+    box-shadow: 0 0 10px #322e7c
 }
 button[type="submit"] {
     width: 100%;
