--- a/mileston_3/styles.css
+++ b/mileston_3/styles.css
@@ -100,6 +100,24 @@ button[type="submit"]:hover {
     background-color: black;
     box-shadow: 2px 3px 10px white;
 }
+.error-message {
+    color: red;
+    font-size: 0.9em;
+  }
+  
+  .delete-button {
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    margin-left: 10px;
+    border-radius: 3px;
+    cursor: pointer;
+  }
+  
+  .delete-button:hover {
+    background-color: #c82333;
+  }
 
 button:hover,
 input:hover,
