--- a/mileston_1-2/styles.css
+++ b/mileston_1-2/styles.css
@@ -1,21 +1,23 @@
-body{
+body {
     font-family: 'Times New Roman', Times, serif;
     margin: 20px;
     padding: 0;
-    background-color:rgb(5, 40, 40);
+    background-color: rgb(5, 40, 40);
 }
-h1{
+
+h1 {
     text-align: center;
     color: rgb(9, 205, 205);
 }
+
 img {
     border-radius: 50%;
     margin-top: 10px;
-     display: block;
-     margin: 0 auto;
+    display: block;
+    margin: 0 auto;
 }
 
-form{
+form {
     max-width: 600px;
     margin: auto;
     background-color: rgb(7, 83, 83);
@@ -24,35 +26,40 @@ form{
     position: relative;
 }
 
-fieldset{
+fieldset {
     border: 2px solid #60c1e4;
     border-radius: 8px;
     padding: 20px;
     margin: 20px;
-    background-color:  rgb(15, 111, 111);    /* #2a7e81;*/
+    background-color: rgb(15, 111, 111);
+    /* #2a7e81;*/
 }
-#toggle-skills, legend{
+
+#toggle-skills,
+legend {
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
     text-align: center;
     color: white;
-    text-shadow: 2px 2px 5px  black;
+    text-shadow: 2px 2px 5px black;
     border: none;
     background: transparent;
     padding: 0px;
     margin-bottom: 5px
 }
-label{
-    display:block;
+
+label {
+    display: block;
     margin-top: 10px;
 }
+
 input[type="text"],
 input[type="email"],
 input[type="tel"],
 input[type="date"],
 select,
 textarea {
-    width: 95% ;
+    width: 95%;
     padding: 8px;
     margin-top: 5px;
     margin-bottom: 10px;
@@ -61,35 +68,41 @@ textarea {
     box-sizing: border-box;
     background: transparent;
     box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.3)
-
 }
-input:focus, textarea:focus, select:focus {
+
+input:focus,
+textarea:focus,
+select:focus {
     outline: none;
     border-color: #342dbb;
     box-shadow: 0 0 10px #322e7c
 }
+
 button[type="submit"] {
     width: 100%;
     background-color: #56aff2;
     color: rgb(245, 234, 234);
-    padding:5px 20px;
+    padding: 5px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-   font-size: 15px;
-  
+    font-size: 15px;
+
 }
+
 button[type="submit"]:hover {
     background-color: black;
     box-shadow: 2px 3px 10px white
 }
+
 button[type="button"]:hover,
 input[type="text"]:hover,
-  input[type="email"]:hover,
-  input[type="tel"]:hover,
-  textarea:hover,form:hover, fieldset:hover {
+input[type="email"]:hover,
+input[type="tel"]:hover,
+input[type="date"]:hover,
+select:hover,
+textarea:hover,
+form:hover,
+fieldset:hover {
     box-shadow: 2px 2px 10px white
-  }
- 
-   
-  
+}
