--- a/mileston_4/styles.css
+++ b/mileston_4/styles.css
@@ -182,6 +182,22 @@ ul li {
     color: #333;
 }
 
+  [contenteditable="true"]:hover {
+    outline: 2px dashed #0c0c0c;
+    padding: 2px;
+    margin-bottom: 50px;
+    cursor: text;
+    color:white;
+    text-shadow: 5px 10px 4px #109ef6; 
+}
+
+[contenteditable="true"]:focus {
+    outline: 2px dashed #c230ac;
+}
+button {
+    margin-top: 10px;
+  }
+
 /* Responsive behavior */
 @media screen and (max-width: 600px) {
 
