--- a/mileston_3/styles.css
+++ b/mileston_3/styles.css
@@ -70,6 +70,7 @@ input[type="email"],
 input[type="tel"],
 input[type="date"],
 input[type="color"],
+input[type="file"],
 select,
 textarea {
     width: 95%;
@@ -195,6 +196,7 @@ ul li {
     input[type="email"],
     input[type="tel"],
     input[type="date"],
+    input[type="file"],
     select{
         width: 98%;
     }
