--- a/mileston_1-2/styles.css
+++ b/mileston_1-2/styles.css
@@ -55,7 +55,7 @@ legend {
 label {
     display: block;
     margin-top: 10px;
-}
+  }
 
 input[type="text"],
 input[type="email"],
@@ -83,21 +83,17 @@ select:focus {
     box-shadow: 0 0 10px #322e7c
 }
 
-button[type="submit"] {
+button{
     width: 100%;
-    background-color: #56aff2;
-    color: rgb(245, 234, 234);
-    padding: 5px 20px;
+    background-color: rgba(11, 231, 231);
+    color: white;
+    text-align: left;
     border: none;
-    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
     cursor: pointer;
-    font-size: 15px;
-
-}
-
-button[type="submit"]:hover {
-    background-color: black;
-    box-shadow: 2px 3px 10px white
+    margin: 5px;
+    border-radius: 5px;
 }
 
 button[type="button"]:hover,
